# TrajectoryEffortController

./: .gitmodules  CMakeLists.txt  package.xml  trajectory_effort_controller.xml
include/trajectory_effort_controller/: ExtendedVector.hpp  trajectory_effort_controller.hpp
src/: trajectory_effort_controller.cpp
